# UmbrellaBoard.Quest

./: CMakeLists.txt  default.bsml  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
assets/: communities_list.bsml  community_cell.bsml  error_content.bsml  header_content.bsml  loading_content.bsml  placeholder_view.bsml
assets/UI/: carousel_ticker.bsml  community_configuration_cell.bsml  community_configuration_view.bsml
cmake/: quest.cmake
include/: BoardSetup.hpp  BoardViewController.hpp  DownloaderUtility.hpp  LoadingControl.hpp  _config.h  assets.hpp  config.hpp  hooking.hpp  logging.hpp
include/UI/: Carousel.hpp  LoadingControl.hpp  PageOpener.hpp
include/UI/Settings/: CommunityConfigurationView.hpp  SettingsFlowCoordinator.hpp
include/UI/Tags/: CarouselTag.hpp  OpenPageTags.hpp
include/UI/TypeHandlers/: CarouselHandler.hpp  PageOpenerHandler.hpp
include/UI/Views/: CommunitiesView.hpp  CommunityConfigurationView.hpp  PageView.hpp
include/Views/: CommunitiesView.hpp  CommunityView.hpp  PageView.hpp  PlaceHolderView.hpp
scripts/: build.ps1  copy.ps1
src/: BoardSetup.cpp  BoardViewController.cpp  DownloaderUtility.cpp  LoadingControl.cpp  config.cpp  main.cpp
src/UI/: Carousel.cpp  LoadingControl.cpp  PageOpener.cpp
src/UI/Settings/: CommunityConfigurationView.cpp  SettingsFlowCoordinator.cpp
src/UI/Tags/: CarouselTag.cpp  OpenPageTags.cpp
src/UI/TypeHandlers/: CarouselHandler.cpp  PageOpenerHandler.cpp
src/UI/Views/: CommunitiesView.cpp  CommunityConfigurationView.cpp  PageView.cpp
src/Views/: CommunitiesView.cpp  CommunityView.cpp  PageView.cpp  PlaceHolderView.cpp
